--- a/episodes/loops.Rmd
+++ b/episodes/loops.Rmd
@@ -111,6 +111,10 @@ Vendor med andet datasæt
 
 Faktorer 
 
+kategoriske variable. Har vi ordinale værdier i datasættet?
+
+forcats
+
 Vendor navn 
 
 Pivot 
